tests/ui/request/non-utf8-body.stderr
error: out of range hex escape
 --> tests/ui/request/non-utf8-body.rs:7:12
  |
7 |          AB\xfc");
  |            ^^^^ must be a character in the range [\x00-\x7f]
