tests/ui/request/non-utf8-body.rs
use http_macros::request;

fn main() {
    let _req = request!(
        "GET /

         AB\xfc");
}
